--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -66,6 +66,7 @@ minimum required versions and URLs from which they may be downloaded.
 | Numpy    |  1.23.2 | https://numpy.org/                    |
 | Rasterio |   1.3.7 | https://github.com/rasterio/rasterio/ |
 | GDAL     |   3.6.1 | https://gdal.org/                     |
+| Emacs    |    29.3 | https://www.gnu.org/software/emacs/   |
 |----------+---------+---------------------------------------|
 
 * Data Model
