Replaced rad_to_deg with math.degrees and deg_to_rad with math.radians

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1723,8 +1723,8 @@ direction \theta.
 
 #+name: rothermel-surface-fire-spread-max-and-any
 #+begin_src python :tangle ../src/pyretechnics/surface_fire.py
-from conversion import deg_to_rad, rad_to_deg, fpm_to_mph
-from math import sin, cos, asin, exp, sqrt
+from conversion import fpm_to_mph
+from math import sin, cos, asin, exp, sqrt, radians, degrees
 
 def almost_zero(x):
     return abs(x) < 0.000001
@@ -1805,7 +1805,7 @@ def spread_info_max_wind_blows_across_slope(spread_rate, phi_W, phi_S, wind_to_d
                                             slope_direction, get_wind_speed):
     wind_magnitude     = spread_rate * phi_W
     slope_magnitude    = spread_rate * phi_S
-    difference_angle   = deg_to_rad((wind_to_direction - slope_direction) % 360.0)
+    difference_angle   = radians((wind_to_direction - slope_direction) % 360.0)
     x                  = slope_magnitude + wind_magnitude * cos(difference_angle)
     y                  = wind_magnitude * sin(difference_angle)
     combined_magnitude = sqrt(x * x + y * y)
@@ -1819,7 +1819,7 @@ def spread_info_max_wind_blows_across_slope(spread_rate, phi_W, phi_S, wind_to_d
     else:
         max_spread_rate      = spread_rate + combined_magnitude
         phi_combined         = (max_spread_rate / spread_rate) - 1.0
-        offset               = rad_to_deg(asin(abs(y) / combined_magnitude))
+        offset               = degrees(asin(abs(y) / combined_magnitude))
         offset_prime         = get_offset_prime(x, y, offset)
         max_spread_direction = (slope_direction + offset_prime) % 360.0
         effective_wind_speed = get_wind_speed(phi_combined)
@@ -1937,7 +1937,7 @@ def compute_spread_rate(max_spread_rate, max_spread_direction, eccentricity, spr
     if almost_zero(eccentricity) or almost_zero(theta):
         return max_spread_rate
     else:
-        return max_spread_rate * (1.0 - eccentricity) / (1.0 - eccentricity * cos(deg_to_rad(theta)))
+        return max_spread_rate * (1.0 - eccentricity) / (1.0 - eccentricity * cos(radians(theta)))
 #+end_src
 
 Using these surface fire spread rate and reaction intensity values, we
