--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -1444,7 +1444,7 @@ computed first without introducing the effects of wind and slope
 #+name: rothermel-surface-fire-spread-no-wind-no-slope
 #+begin_src python :tangle ../src/pyretechnics/surface_fire.py
 from math import exp
-from fuel_models import map_category, map_size_class, category_sum, size_class_sum
+from pyretechnics.fuel_models import map_category, map_size_class, category_sum, size_class_sum
 
 def calc_mineral_damping_coefficients(f_ij, S_e):
     S_e_i = size_class_sum(lambda i: f_ij[i] * S_e[i])
@@ -1723,8 +1723,8 @@ direction \theta.
 
 #+name: rothermel-surface-fire-spread-max-and-any
 #+begin_src python :tangle ../src/pyretechnics/surface_fire.py
-from conversion import fpm_to_mph
 from math import sin, cos, asin, exp, sqrt, radians, degrees
+from pyretechnics.conversion import fpm_to_mph
 
 def almost_zero(x):
     return abs(x) < 0.000001
@@ -2224,10 +2224,10 @@ in Pyretechnics.
 
 #+name: burn-cells
 #+begin_src python :tangle ../src/pyretechnics/burn_cells.py
-from conversion import wind_speed_10m_to_wind_speed_20ft, m_to_ft, Btu_ft_s_to_kW_m, m_min_to_km_hr, m_min_to_mph, ft_to_m, Btu_lb_to_kJ_kg
-from fuel_models import fuel_models_precomputed, moisturize
 from math import sqrt, atan2, degrees
-import surface_fire as sf
+from pyretechnics.conversion import wind_speed_10m_to_wind_speed_20ft, m_to_ft, Btu_ft_s_to_kW_m, m_min_to_km_hr, m_min_to_mph, ft_to_m, Btu_lb_to_kJ_kg
+from pyretechnics.fuel_models import fuel_models_precomputed, moisturize
+import pyretechnics.surface_fire as sf
 
 # NOTE: Name change (no more !)
 # NOTE: Make inputs["fuel_spread_adjustment"] and inputs["weather_spread_adjustment"] default to a function that always returns 1.0
