Switched to package-qualified modules names for test modules

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2551,7 +2551,7 @@ from https://landfire.gov, using the function we defined in section
 
 #+name: add-landfire-layers-to-pyretechnics-inputs
 #+begin_src python :tangle ../test/pyretechnics/burn_cells_test.py
-from load_landfire import read_landfire_rasters_as_pyretechnics_inputs
+from pyretechnics.load_landfire import read_landfire_rasters_as_pyretechnics_inputs
 
 input_layer_dict = read_landfire_rasters_as_pyretechnics_inputs({
     "elevation"          : "../data/LF2020_Elev_220_CONUS/LC20_Elev_220.tif",
@@ -2592,7 +2592,7 @@ input_layer_dict.update(
 
 #+name: test-burn-cells-on-pyretechnics-inputs
 #+begin_src python :tangle ../test/pyretechnics/burn_cells_test.py
-from burn_cells import compute_max_in_situ_values
+from pyretechnics.burn_cells import compute_max_in_situ_values
 
 t = 0
 y = 0
