Added section "Running Burn Cells on the Test Dataset" to pyretechnics.org

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2106,7 +2106,7 @@ active, otherwise passive.
 
 #+name: cruz-crown-fire-spread
 #+begin_src python :tangle ../src/pyretechnics/crown_fire.py
-from math import exp, prod
+from math import exp
 
 def cruz_active_crown_fire_spread(wind_speed_10m, canopy_bulk_density, estimated_fine_fuel_moisture):
     """
@@ -2115,10 +2115,10 @@ def cruz_active_crown_fire_spread(wind_speed_10m, canopy_bulk_density, estimated
     - canopy_bulk_density (kg/m^3)
     - estimated_fine_fuel_moisture (M_f[0] "dead-1hr") (0-1)
     """
-    return prod(11.02,
-                wind_speed_10m ** 0.90,
-                canopy_bulk_density ** 0.19,
-                exp(-17.0 * estimated_fine_fuel_moisture))
+    return (11.02
+            ,* wind_speed_10m ** 0.90
+            ,* canopy_bulk_density ** 0.19
+            ,* exp(-17.0 * estimated_fine_fuel_moisture))
 
 
 def cruz_passive_crown_fire_spread(active_spread_rate, critical_spread_rate):
@@ -2366,15 +2366,15 @@ def compute_max_in_situ_values(inputs, t, y, x):
             max_crown_spread_rate = abs(max_crown_spread_rate) # ft/min
             crown_eccentricity    = (surface_eccentricity
                                      if (max_surface_spread_rate > max_crown_spread_rate)
-                                     else crown_fire_eccentricity(m_min_to_mph(wind_speed_20ft))) # unitless
+                                     else cf.crown_fire_eccentricity(m_min_to_mph(wind_speed_20ft))) # unitless
             #=======================================================================================
             # NOTE: The calculations to determine the fireline_normal_spread_rate have been elided.
             #=======================================================================================
             # Max Crown Intensity
-            max_crown_intensity   = crown_fire_line_intensity(ft_to_m(max_crown_spread_rate),
-                                                              canopy_bulk_density,
-                                                              (canopy_height - canopy_base_height),
-                                                              Btu_lb_to_kJ_kg(fuel_model["h"][0])) # kW/m
+            max_crown_intensity   = cf.crown_fire_line_intensity(ft_to_m(max_crown_spread_rate),
+                                                                 canopy_bulk_density,
+                                                                 (canopy_height - canopy_base_height),
+                                                                 Btu_lb_to_kJ_kg(fuel_model["h"][0])) # kW/m
             # Max Combined Spread Rate, Intensity, and Flame Length
             max_spread_rate       = ft_to_m(max(max_surface_spread_rate, max_crown_spread_rate)) # m/min
             max_intensity         = max_surface_intensity + max_crown_intensity # kW/m
@@ -2590,7 +2590,7 @@ in section [[Testing burn_cells on Worcester, VT]].
 * Testing burn_cells on Worcester, VT
 
 For testing purposes, we have downloaded these layers, clipped to a
-small region in central Vermont and stored them in the [[file:../test/data/][../test/data/]]
+small region in central Vermont, and stored them in the [[file:../test/data/][../test/data/]]
 directory of this repository.
 
 ** Loading Topography, Fuel Model, and Vegetation Inputs from LANDFIRE GeoTIFFs
@@ -2632,18 +2632,6 @@ landfire_file_paths = {
 }
 
 
-weather_functions = {
-    "wind_speed_10m_x"             : lambda t,y,x: 0.00, # meters/minute
-    "wind_speed_10m_y"             : lambda t,y,x: 0.00, # meters/minute
-    "fuel_moisture_dead_1hr"       : lambda t,y,x: 0.06, # ratio [0-1+] grams moisture/grams ovendry wood
-    "fuel_moisture_dead_10hr"      : lambda t,y,x: 0.08, # ratio [0-1+] grams moisture/grams ovendry wood
-    "fuel_moisture_dead_100hr"     : lambda t,y,x: 0.10, # ratio [0-1+] grams moisture/grams ovendry wood
-    "fuel_moisture_live_herbaceous": lambda t,y,x: 0.75, # ratio [0-1+] grams moisture/grams ovendry wood
-    "fuel_moisture_live_woody"     : lambda t,y,x: 0.60, # ratio [0-1+] grams moisture/grams ovendry wood
-    "foliar_moisture"              : lambda t,y,x: 1.20, # ratio [0-1+] grams moisture/grams ovendry foliage
-}
-
-
 def test_read_landfire_rasters():
     input_layer_dict = read_landfire_rasters_as_pyretechnics_inputs(landfire_file_paths)
     assert type(input_layer_dict) == dict
@@ -2661,6 +2649,18 @@ shows how we can easily set constant values for each of these layers:
 
 #+name: add-constant-wind-moisture-to-pyretechnics-inputs
 #+begin_src python :tangle ../test/pyretechnics_test/test_burn_cells.py
+weather_functions = {
+    "wind_speed_10m_x"             : lambda t,y,x: 0.00, # meters/minute
+    "wind_speed_10m_y"             : lambda t,y,x: 0.00, # meters/minute
+    "fuel_moisture_dead_1hr"       : lambda t,y,x: 0.06, # ratio [0-1+] grams moisture/grams ovendry wood
+    "fuel_moisture_dead_10hr"      : lambda t,y,x: 0.08, # ratio [0-1+] grams moisture/grams ovendry wood
+    "fuel_moisture_dead_100hr"     : lambda t,y,x: 0.10, # ratio [0-1+] grams moisture/grams ovendry wood
+    "fuel_moisture_live_herbaceous": lambda t,y,x: 0.75, # ratio [0-1+] grams moisture/grams ovendry wood
+    "fuel_moisture_live_woody"     : lambda t,y,x: 0.60, # ratio [0-1+] grams moisture/grams ovendry wood
+    "foliar_moisture"              : lambda t,y,x: 1.20, # ratio [0-1+] grams moisture/grams ovendry foliage
+}
+
+
 def test_add_weather_functions():
     input_layer_dict = test_read_landfire_rasters()
     input_layer_dict.update(weather_functions)
@@ -2670,9 +2670,13 @@ def test_add_weather_functions():
     return input_layer_dict
 #+end_src
 
-** Running Burn Cells on the Test Dataset
+** Burning a Single Cell in the Dataset
 
-#+name: test-burn-cells-on-pyretechnics-inputs
+Now that our input layers are all loaded, our next step will be to
+make sure that we can burn a single cell as a head fire and get back
+meaningful results.
+
+#+name: burn-single-cell-in-pyretechnics-inputs
 #+begin_src python :tangle ../test/pyretechnics_test/test_burn_cells.py
 from pyretechnics.burn_cells import compute_max_in_situ_values
 
@@ -2681,14 +2685,54 @@ def test_burn_one_cell():
     (t,y,x) = (0,100,100)
     result = compute_max_in_situ_values(input_layer_dict, t, y, x)
     assert result == {
-        'max_spread_rate'        : 0.32044995422500566,
-        'max_spread_direction'   : 41.0,
-        'max_flame_length'       : 0.35078585296988984,
-        'max_fire_line_intensity': 26.661398424207746,
-        'fire_type'              : 1,
-        'eccentricity'           : 0.5583790663230914,
+        "max_spread_rate"        : 0.32044995422500566,
+        "max_spread_direction"   : 41.0,
+        "max_flame_length"       : 0.35078585296988984,
+        "max_fire_line_intensity": 26.661398424207746,
+        "fire_type"              : 1,
+        "eccentricity"           : 0.5583790663230914,
     }
     return result
+#+end_src
+
+** Running Burn Cells on the Test Dataset
+
+#+name: burn-all-cells-in-pyretechnics-inputs
+#+begin_src python :tangle ../test/pyretechnics_test/test_burn_cells.py
+import numpy as np
+
+def test_burn_all_cells():
+    # TODO: Extract these dimensions from the input layers
+    rows = 613
+    cols = 549
+
+    max_spread_rate_matrix         = np.zeros((rows, cols), dtype="float32")
+    max_spread_direction_matrix    = np.zeros((rows, cols), dtype="int16")
+    max_flame_length_matrix        = np.zeros((rows, cols), dtype="float32")
+    max_fire_line_intensity_matrix = np.zeros((rows, cols), dtype="float32")
+    fire_type_matrix               = np.zeros((rows, cols), dtype="uint8")
+    eccentricity_matrix            = np.zeros((rows, cols), dtype="float32")
+
+    input_layer_dict = test_add_weather_functions()
+
+    for y in range(rows):
+        for x in range(cols):
+            results                             = compute_max_in_situ_values(input_layer_dict, 0, y, x)
+            max_spread_rate_matrix[y,x]         = results["max_spread_rate"]
+            max_spread_direction_matrix[y,x]    = results["max_spread_direction"]
+            max_flame_length_matrix[y,x]        = results["max_flame_length"]
+            max_fire_line_intensity_matrix[y,x] = results["max_fire_line_intensity"]
+            fire_type_matrix[y,x]               = results["fire_type"]
+            eccentricity_matrix[y,x]            = results["eccentricity"]
+
+    return {
+        "max_spread_rate"        : max_spread_rate_matrix,
+        "max_spread_direction"   : max_spread_direction_matrix,
+        "max_flame_length"       : max_flame_length_matrix,
+        "max_fire_line_intensity": max_fire_line_intensity_matrix,
+        "fire_type"              : fire_type_matrix,
+        "eccentricity"           : eccentricity_matrix,
+    }
 #+end_src
 
 * Fire Spread on a Raster Grid
